[FIX]page visiblity number issue

--- a/scout_customize/static/src/css/style.css
+++ b/scout_customize/static/src/css/style.css
@@ -1,4 +1,8 @@
+.pagination > .page-item > .page-link {
+    color: #6c757d;
+}
 
+/*color: #6c757d;*/
 #products_grid_before .js_attributes {
     margin-bottom: 0px !important;
     border-bottom: 0px !important;
@@ -18,6 +22,7 @@
 .d-md-block{
     display: block !important;
 }
+
 
 @media (min-width: 411px) and (max-width:735px) {
 
@@ -57,11 +62,7 @@
 .middle-footer .fot-col address{
     color:#1d5861 !important;
 }
-
 /*geminatecs nov18*/
-
-
-
 @media (min-width: 320px) and (max-width:735px) {
     .oe_website_sale .td-img{
         display: block !important;
